--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "linear-converter-to-go": "^5.1.0"
   }
 }
